# ckmertools

./: .gitignore  CMakeLists.txt  LICENSE.MD  Readme.MD
src/: KmersWrapper.cpp  KmersWrapper.h  logsystem.cpp  logsystem.h  main.cpp  parsing.cpp  parsing.h  probabilistic.cpp  probabilistic.h
